--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
     "name": "davwheat/flarum-ext-ads",
-    "description": "Ad support for your Flarum forum.",
+    "description": "Ads support for your Flarum forum.",
     "keywords": [
-        "flarum"
+        "flarum",
+        "ads",
+        "adsense",
+        "davwheat"
     ],
     "type": "flarum-extension",
     "license": "MIT",
     "require": {
-        "flarum/core": "^1.0.0"
-    },
-    "require-dev": {
-        "flarum/testing": "^1.0.0"
+        "flarum/core": "^1.0.4"
     },
     "authors": [
         {
@@ -24,35 +24,15 @@
             "Davwheat\\Ads\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Davwheat\\Ads\\Tests\\": "tests/"
-        }
-    },
     "extra": {
         "flarum-extension": {
-            "title": "Davwheat Ads",
-            "category": "",
+            "title": "davwheat Ad Units",
+            "category": "feature",
             "icon": {
-                "name": "",
-                "backgroundColor": "",
-                "color": ""
+                "name": "fas fa-ad",
+                "backgroundColor": "#51c5dd",
+                "color": "#000"
             }
         }
-    },
-    "scripts": {
-        "test": [
-            "@test:unit",
-            "@test:integration"
-        ],
-        "test:unit": "phpunit -c tests/phpunit.unit.xml",
-        "test:integration": "phpunit -c tests/phpunit.integration.xml",
-        "test:setup": "@php tests/integration/setup.php"
-    },
-    "scripts-descriptions": {
-        "test": "Runs all tests.",
-        "test:unit": "Runs all unit tests.",
-        "test:integration": "Runs all integration tests.",
-        "test:setup": "Sets up a database for use with integration tests. Execute this only once."
     }
 }
