--- a/js/package.json
+++ b/js/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "prettier": "@flarum/prettier-config",
   "dependencies": {
-    "flarum-webpack-config": "^2.0.0",
-    "flarum-tsconfig": "^1.0.2",
     "@flarum/prettier-config": "^1.0.0",
-    "webpack": "^5.71.0",
+    "flarum-tsconfig": "^1.0.2",
+    "flarum-webpack-config": "^2.0.0",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
   "devDependencies": {
-    "prettier": "^2.6.1"
+    "prettier": "^2.6.2"
   },
   "scripts": {
     "dev": "webpack --mode development --watch",
     "build": "webpack --mode production",
     "format": "prettier --write src",
     "format-check": "prettier --check src"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
